# FastAPI-onion-architecture

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  create.py  main.py  make.bat  pyproject.toml  test.env  test.py
app/configurations/: app.py  config.py  context_manager.py  database.py  db.py  repository.py  server.py
app/customer/: entitys.py  models.py  repository.py  route.py  services.py
app/product/: entitys.py  models.py  repository.py  route.py  services.py
app/purchases/: entitys.py  models.py  repository.py  route.py  services.py
app/sales/: entitys.py  models.py  repository.py  route.py  services.py
app/supplier/: entitys.py  models.py  repository.py  route.py  services.py
app/utils/: repositorie.py  service.py  unittowork.py
docker/: docker-compose.yaml
migrations/: env.py
migrations/versions/: 1cccc4d4412f_delete_itempur.py  2e61df661d85_create_product_party_and_products.py  9bf284b8bc93_create_table_purchases.py  c2fb2c4eed16_update_party_column_quantity.py  fd13cbb22b4b_add_data_column_to_purchase_item.py
test/: conftest.py  delete_test.py  get_test.py  post_test.py
