[tool.poetry]
name = "mvm"
version = "0.1.0"
description = "Тестовое задание, пробую написать чистую архитектуру"
authors = ["Ivan <ivanbozhkod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
fastapi = {extras = ["all"], version = "^0.115.5"}
psycopg-binary = "^3.2.3"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
aiohttp = "^3.11.10"
pytest-asyncio = "^0.25.0"
pytest-dotenv = "^0.5.2"
pytest-trio = "^0.8.0"
pytest-xdist = "^3.6.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
env_files = [".test.env"]
addopts = "-n 1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
