[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ivan <ivanbozhkod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
pytest-xdist = "^3.6.1"
pytest-dotenv = "^0.5.2"
asgi-lifespan = "^2.1.0"


[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = "^0.34.0"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
aiohttp = "^3.11.10"
pytest-ordering = "^0.6"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-n 1"
env_files = ["test.env"]
asyncio_default_fixture_loop_scope = "function"



[tool.poetry.scripts]
start = "main:run_uvicorn"
test = "pytest:main"
